# iot_sensor_network

./: .gitignore  .pre-commit-config.yaml  README.md  boot_master.py  main_padre_copia.py  pyproject.toml
Master_nodo_hijo/: bme280.py  bme_driver.py  boot.py  config.py  cwt_soil.py  ds1307.py  hd38.py  http_client.py  main.py  power_control.py  retry_queue.py  rtc_ds1307.py  wifi_client.py
Master_nodo_padre/: boot.py  config.py  lte_queue.py  main.py  power_control.py  rtc_ds1307.py  rtc_fallback.py  sd_utils.py  sim800l.py  wifi_server.py
blink_led/: main.py
buoy_controller/: boot.py  config.py  main.py
buoy_controller/core/: data_logger.py  motor_control.py  web_server.py
buoy_controller/drivers/: atlas_rtd.py  bme280.py  ds18b20.py  rtc_ds1307.py  sd_utils.py  sdcard.py
copia_padre/Master_nodo_padre/: bme280.py  bme_driver.py  boot.py  config.py  cwt_soil.py  ds1307.py  lte_queue.py  main.py  power_control.py  pymakr.conf  rtc_ds1307.py  rtc_fallback.py  sd_utils.py  sim800l.py  wifi_server.py
docs/: MICROPYTHON_GUIDELINES.md
irrigation_controller/: README.md  config.py  main.py
irrigation_controller/core/: data_logger.py  irrigation_logic.py  telemetry.py
irrigation_controller/drivers/: bme280.py  bme_driver.py  cwt_soil.py  ds1307.py  hd38.py  rtc_ds1307.py  sdcard.py  sim800l.py
prueba_cwt/: boot.py  cwt_soil.py  main.py
tests/: test_rtc_mock.py
utils/: fix_esp32.py  force_delete.py  upload_code.py
